# sota-lxd

./: .env.template  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile.backend  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f3f8e9ad8da_first_create_script.py
backend/app/: main.py  security.py  settings.py
backend/app/api/: deps.py  login.py
backend/app/api/v1/endpoints/: images.py  users.py
backend/app/crud/: base.py  crud_user.py
backend/app/db/: base_class.py  init_db.py  session.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  image.py  user.py
frontend/: Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
frontend/components/layout/: consoleLayout.tsx  index.ts  logo.module.css  logo.tsx  mainLayout.module.css  mainLayout.tsx
frontend/components/user/: hooks.ts  index.ts
frontend/libs/: http.ts  swrHelpers.ts
frontend/pages/: _app.tsx  assistant.tsx  index.tsx  login.tsx
frontend/pages/console/: account.tsx  images.tsx  index.tsx  instances.tsx
frontend/styles/: Login.module.css  globals.css
