[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ming Yang <ymviv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
email-validator = "^1.3.1"
sqlalchemy = "^2.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
alembic = "^1.9.4"
python-multipart = "^0.0.6"
celery = "^5.2.7"
emails = "^0.6"
sentry-sdk = "^1.16.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
